added batka annotation

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,20 @@ process {
     withName: ORIENTATION {
         executor = 'local'
     }
+        // One-time setup: Needs network access and enough time for ~80GB download
+    withName: BAKTA_DOWNLOAD {
+        clusterOptions = '-A gbru -q atlas -N 1 -n 1'
+        cpus = 1
+        time = '4h' // Adjust based on your cluster's internet speed
+    }
+
+    // Annotation: Memory intensive, requires significant CPU for Bakta's tools (tRNAscan-SE, etc.)
+    withName: BAKTA_ANNOTATE {
+        clusterOptions = '-A gbru -q atlas -N 1 -n 24'
+        cpus = 24
+        memory = '192 GB' // Bakta's "full" DB works best with ample RAM
+        time = '4h'
+    }
 }
 
 apptainer {
