--- a/nextflow.config
+++ b/nextflow.config
@@ -1,46 +1,62 @@
 process {
-    // Default executor for all processes unless overridden
     executor = 'slurm'
+    containerEngine = 'apptainer'    
 
-    // Resource allocation for the new adapter filtering process
-    withName: ADAPTER_FILT {
-        clusterOptions = '-A gbru -q atlas -N 1 -n 12'
-        cpus = 12
-        time = '1h'
-    }
+    // Dummy container for implicit processes that still need a designated container
+    container = 'debian:stable'
 
     withName: HIFIASM {
-        clusterOptions = '-A gbru -q atlas -N 1 -n 24'
+        clusterOptions = '-A gbru_fy21_salm_compgen --mem=64GB'
         cpus = 24
-        time = '12h'
+        memory = '64 GB'
+        time = '24h'
+        errorStrategy = 'finish'
     }
 
-    // Runs on the head node
+    withName: LOG_EMPTY_ASSEMBLY {
+        clusterOptions = '-A gbru_fy21_salm_compgen'
+        errorStrategy = 'ignore'
+    }
+
     withName: ORIENTATION {
-        executor = 'local'
-    }
-        // One-time setup: Needs network access and enough time for ~80GB download
-    withName: BAKTA_DOWNLOAD {
-        clusterOptions = '-A gbru -q atlas -N 1 -n 1'
-        cpus = 1
-        time = '4h' // Adjust based on your cluster's internet speed
+        clusterOptions = '-A gbru_fy21_salm_compgen'
+        container = '/project/gbru_fy21_salm_compgen/annette/salmonella_genome_assembly/apptainer_cache/mappy_bio.sif'
+        errorStrategy = 'finish'
     }
 
-    // Annotation: Memory intensive, requires significant CPU for Bakta's tools (tRNAscan-SE, etc.)
-    withName: BAKTA_ANNOTATE {
-        clusterOptions = '-A gbru -q atlas -N 1 -n 24'
-        cpus = 24
-        memory = '192 GB' // Bakta's "full" DB works best with ample RAM
+    // Annotate with tRNAscan-SE separately because bakta's chunking method leads to errors
+    withName: TRNASCAN {
+        clusterOptions = '-A gbru_fy21_salm_compgen --mem=192GB'
+        cpus = 8
+        memory = '192 GB'
         time = '4h'
+        errorStrategy = 'finish'
     }
+
+    // Annotation: Memory intensive, requires significant CPU for Bakta's tools
+    withName: BAKTA_ANNOTATE {
+        clusterOptions = '-A gbru_fy21_salm_compgen --mem=192GB'
+        cpus = 8
+        memory = '192 GB'
+        time = '4h'
+        errorStrategy = 'finish'
+    }
+}
+
+report {
+    enabled = true
+    overwrite = true
 }
 
 apptainer {
     enabled = true
     autoMounts = true
     // Store images here to avoid re-downloading every run
-    cacheDir = 'apptainer_cache'
+    cacheDir = '/project/gbru_fy21_salm_compgen/annette/salmonella_genome_assembly/apptainer_cache'
     
     // Ensures containers can write to system temp directories if needed
     runOptions = '-C -H $PWD'
+    
+    // Remote proxy
+    envWhitelist = 'http_proxy,https_proxy'
 }
